tests/parser/assign_no_lvalue.nx
fun main() {
    4 + 5 = 8;
}
